Quorum3/Library/Tests/TypeCheckerGenerated/Pass/ImpAssignIntegerObject.quorum
class Main
    action Main
        Object v
        integer t = 5
        v = cast(Object, t)
        Test(v)
    end

    action Test(integer var)
        if var = 5
            output "passed"
        end
    end
end
