Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignBoolObjIntegerField.quorum
class Main
    integer v = 5
    action Main
        Test(v)
    end

    action Test(Boolean var)
    end
end
